@@ -139,7 +139,7 @@ extern int      spSendResult(int *to, int *from, void *data,
                              unsigned long size);
 extern unsigned long getInode(int fd);
 
-extern void     initSocketPairs(int provs, int https, int shttps);
+extern void     initSocketPairs(int provs, int https);
 
 extern int      semAcquireUnDo(int semid, int semnum);
 extern int      semAcquire(int semid, int semnum);
@@ -148,7 +148,7 @@ extern int      semReleaseUnDo(int semid, int semnum);
 extern int      semMultiRelease(int semid, int semnum, int n);
 extern int      semGetValue(int semid, int semnum);
 extern int      semSetValue(int semid, int semnum, int value);
-extern int      initSem(int https, int shttps, int provs);
+extern int      initSem(int https, int provs);
 
 extern int      provProcSem;
 extern int      provWorkSem;
@@ -168,13 +168,12 @@ extern char    *httpPauseStr;
  */
 #define HTTP_GUARD_ID 0
 #define HTTP_PROCS_ID 1
-#define SHTTP_GUARD_ID 2
-#define SHTTP_PROCS_ID 3
+
 /*
  * PROV_PROC_BASE_ID must be updated if the number of id's in the above
  * block changes. 
  */
-#define PROV_PROC_BASE_ID 4
+#define PROV_PROC_BASE_ID 2
 
 /*
  * constants for calculating per process ids 
@@ -198,9 +197,7 @@ extern char    *httpPauseStr;
 extern ComSockets *sPairs;
 extern int      ptBase,
                 htBase,
-                stBase,
-                htMax,
-                stMax;
+                htMax;
 
 extern void     stopLocalConnectServer();
 extern void     localConnectServer();
